<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2010-present Facebook.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	
	<RelativeLayout 
		android:layout_width="match_parent"
		android:layout_height="60dp"
		android:background="@color/title_bar">

        <TextView
            android:id="@+id/userScreenName"
            android:text="@string/default_screen_name"
            android:textColor="@color/text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="left|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true" />

        <com.facebook.widget.ProfilePictureView
            android:id="@+id/selection_profile_pic"
            app:preset_size="small"
            android:gravity="right|center_vertical"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <LinearLayout android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px" >
        <requestFocus />
    </LinearLayout>

    <!-- Activity bar -->
    <us.iseek.android.view.MenuView
        android:background="@color/background"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:selectedItem="@string/topicsButton"/>

    <!-- Activity bar separator -->
    <include layout="@layout/separator" />
    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/background">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal|top"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true" />

        <TextView
            android:textColor="@color/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/loading_topics"
            android:id="@+id/progressLabel"
            android:layout_below="@+id/progressBar"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
	<ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:background="@color/background">

	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:orientation="vertical">
	
	        <us.iseek.android.view.FullListView
	            android:id="@+id/topic_list"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_margin="20dp"
	            android:dividerHeight="@dimen/item_list_padding"
	            android:divider="#00000000"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>


